--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -49,7 +49,7 @@
 
         <!--sidebar nav start-->
         <ul class="nav nav-pills nav-stacked custom-nav">
-            <li class="menu-list"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a>
+            <li class="menu-list"><a th:href="@{/main.html}"><i class="fa fa-home"></i> <span>Dashboard</span></a>
                 <ul class="sub-menu-list">
                     <li><a href="index_alt.html"> Dashboard 1</a></li>
                     <li><a href="index.html"> Dashboard 2</a></li>
@@ -350,7 +350,7 @@
                 <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
                     <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
                     <li><a href="#"><i class="fa fa-cog"></i>  Settings</a></li>
-                    <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                    <li><a th:href="@{/}"><i class="fa fa-sign-out"></i> Log Out</a></li>
                 </ul>
             </li>
 
